--- a/index.html
+++ b/index.html
@@ -35,22 +35,30 @@
               <a href="tel:8 (800) 707-07-11">8 (800) 707-07-11</a>
             </div>
             <div class="header__media-group">
-              <img class="svg-24" src="/svg/ok.svg" alt="ok" />
-              <img class="svg-24" src="/svg/vk.svg" alt="vk" />
-              <img class="svg-24" src="/svg/tg.svg" alt="tg" />
-              <img
-                class="header__ru-img svg-24"
-                src="/svg/ru.svg"
-                alt="rutube"
-              />
+              <a href="https://ok.ru/" target="”_blank”">
+                <img class="svg-24" src="/svg/ok.svg" alt="ok" />
+              </a>
+              <a href="https://vk.com/" target="”_blank”">
+                <img class="svg-24" src="/svg/vk.svg" alt="vk" />
+              </a>
+              <a href="https://web.telegram.org/z/" target="”_blank”">
+                <img class="svg-24" src="/svg/tg.svg" alt="tg" />
+              </a>
+              <a href="https://rutube.ru/" target="”_blank”">
+                <img
+                  class="header__ru-img svg-24"
+                  src="/svg/ru.svg"
+                  alt="rutube"
+                />
+              </a>
             </div>
           </div>
         </div>
       </header>
       <div class="container">
         <div class="info">
-          <div>
-            <div class="info__text-block">
+          <div class="info__text-container">
+            <div id="text-block" class="info__text-block">
               <p class="info__big-text">ПОДДЕРЖКА МАЛОГО БИЗНЕСА</p>
               <p class="info__small-text">
                 Комплексная поддержка предпринимателей Краснодарского края
@@ -116,7 +124,7 @@
             </div>
           </div>
         </div>
-        <div id="calendar" class="calendar">
+        <!-- <div id="calendar" class="calendar">
           <div class="calendar__month">october</div>
           <div class="calendar__day">1</div>
           <div class="calendar__day calendar__day--circled">2</div>
@@ -126,7 +134,7 @@
             3
           </div>
         </div>
-        <div class="slider"></div>
+        <div class="slider"></div> -->
       </div>
     </div>
     <script type="module" src="/main.js"></script>
