--- a/index.html
+++ b/index.html
@@ -91,40 +91,45 @@
           </div>
           <div id="slider-window" class="info__slider-window">
             <div id="slider" class="info__slider">
-              <img
-                id="img-1"
-                class="info__img info__img-big"
-                src="images/img1.png"
-                alt="carousel img"
-              />
-              <img
-                id="img-2"
-                class="info__img"
-                src="images/img2.png"
-                alt="carousel img"
-              />
-              <img
-                id="img-3"
-                class="info__img"
-                src="images/img3.png"
-                alt="carousel img"
-              />
-              <img
-                id="img-4"
-                class="info__img"
-                src="images/img4.png"
-                alt="carousel img"
-              />
-              <img
-                id="img-5"
-                class="info__img"
-                src="images/img5.png"
-                alt="carousel img"
-              />
+              <div id="img-1" class="info__img-big">
+                <img
+                  class="info__picture"
+                  src="images/img1.png"
+                  alt="carousel img"
+                />
+              </div>
+              <div id="img-2" class="info__img">
+                <img
+                  class="info__picture"
+                  src="images/img2.png"
+                  alt="carousel img"
+                />
+              </div>
+              <div id="img-3" class="info__img">
+                <img
+                  class="info__picture"
+                  src="images/img3.png"
+                  alt="carousel img"
+                />
+              </div>
+              <div id="img-4" class="info__img">
+                <img
+                  class="info__picture"
+                  src="images/img4.png"
+                  alt="carousel img"
+                />
+              </div>
+              <div id="img-5" class="info__img">
+                <img
+                  class="info__picture"
+                  src="images/img5.png"
+                  alt="carousel img"
+                />
+              </div>
             </div>
           </div>
         </div>
-        <!-- <div id="calendar" class="calendar">
+        <div id="calendar" class="calendar">
           <div class="calendar__month">october</div>
           <div class="calendar__day">1</div>
           <div class="calendar__day calendar__day--circled">2</div>
@@ -134,7 +139,7 @@
             3
           </div>
         </div>
-        <div class="slider"></div> -->
+        <div class="slider"></div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
