improved calendar control

--- a/index.html
+++ b/index.html
@@ -130,51 +130,57 @@
           </div>
         </div>
         <div class="calendar-affiche">
-          <div class="calendar">
-            <div class="calendar__control">
-              <img
-                id="next-month"
-                class="calendar-affiche__arrow"
-                src="/svg/arrow.svg"
-                alt="arrow"
-              />
-              <span id="month-text" class="calendar__month-text"
-                >Февраль 2023</span
-              >
-              <img
-                id="prev-month"
-                class="calendar-affiche__arrow-right calendar-affiche__arrow"
-                src="/svg/arrow.svg"
-                alt="arrow"
-              />
-            </div>
-            <div id="calendar" class="calendar__days"></div>
-          </div>
-          <div id="affiche" class="affiche">
-            <img
-              id="prev-event"
-              class="calendar-affiche__arrow calendar-affiche__arrow-absolute--left"
-              src="/svg/arrow.svg"
-              alt="arrow"
-            />
-            <img
-              id="next-event"
-              class="calendar-affiche__arrow-right calendar-affiche__arrow calendar-affiche__arrow-absolute--right"
-              src="/svg/arrow.svg"
-              alt="arrow"
-            />
-            <span id="affiche-date" class="affiche__date">13 / 12 / 22</span>
-            <p id="affiche-text" class="affiche__text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur,
-              iste odio id laboriosam ullam ab provident modi deleniti!.
-            </p>
-            <div class="affiche__about">
-              <div class="affiche__control-left">
-                <span class="affiche__control-text">ДЛЯ ПРЕДПРИНИМАТЕЛЕЙ</span>
+          <h2 class="calendar-affiche__header">АФИША СОБЫТИЙ</h2>
+          <div class="calendar-affiche__container">
+            <div class="calendar">
+              <div class="calendar__control">
+                <img
+                  id="next-month"
+                  class="calendar-affiche__arrow"
+                  src="/svg/arrow.svg"
+                  alt="arrow"
+                />
+                <span id="month-text" class="calendar__month-text"
+                  >Февраль 2023</span
+                >
+                <img
+                  id="prev-month"
+                  class="calendar-affiche__arrow-right calendar-affiche__arrow"
+                  src="/svg/arrow.svg"
+                  alt="arrow"
+                />
               </div>
-              <div class="affiche__control-right">
-                <span class="affiche__more">Подробнее</span>
-                <img src="/svg/control-arrow.svg" alt="control-arrow" />
+              <div id="calendar" class="calendar__days"></div>
+            </div>
+            <div id="affiche" class="affiche">
+              <img
+                id="prev-event"
+                class="calendar-affiche__arrow calendar-affiche__arrow-absolute--left"
+                src="/svg/arrow.svg"
+                alt="arrow"
+              />
+              <img
+                id="next-event"
+                class="calendar-affiche__arrow-right calendar-affiche__arrow calendar-affiche__arrow-absolute--right"
+                src="/svg/arrow.svg"
+                alt="arrow"
+              />
+              <span id="affiche-date" class="affiche__date">13 / 12 / 22</span>
+              <p id="affiche-text" class="affiche__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Tenetur, iste odio id laboriosam ullam ab provident modi
+                deleniti!.
+              </p>
+              <div class="affiche__about">
+                <div class="affiche__control-left">
+                  <span class="affiche__control-text"
+                    >ДЛЯ ПРЕДПРИНИМАТЕЛЕЙ</span
+                  >
+                </div>
+                <div class="affiche__control-right">
+                  <span class="affiche__more">Подробнее</span>
+                  <img src="/svg/control-arrow.svg" alt="control-arrow" />
+                </div>
               </div>
             </div>
           </div>
