added calendar styles

--- a/index.html
+++ b/index.html
@@ -165,6 +165,18 @@
                 src="/svg/arrow.svg"
                 alt="arrow"
               />
+              <img
+                id="next-event"
+                class="calendar-affiche__arrow-mobile calendar-affiche__arrow-mobile--left"
+                src="/svg/arrow-mobile.svg"
+                alt="arrow"
+              />
+              <img
+                id="next-event"
+                class="calendar-affiche__arrow-mobile calendar-affiche__arrow-mobile--right"
+                src="/svg/arrow-mobile.svg"
+                alt="arrow"
+              />
               <span id="affiche-date" class="affiche__date">13 / 12 / 22</span>
               <p id="affiche-text" class="affiche__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
