--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
               </p>
             </div>
             <div>
-              <button class="info__button">Оставить заявку</button>
+              <button id="open-modal-btn" class="info__button">
+                Оставить заявку
+              </button>
               <div class="info__pagination-container">
                 <div class="info__pagination info__small-text">
                   <span>01</span>
@@ -197,6 +199,60 @@
             </div>
           </div>
         </div>
+        <div id="modal" class="modal-window">
+          <h2 class="modal-window__header">ЗАЯВКА НА ОКАЗАНИЕ УСЛУГИ</h2>
+          <div class="modal-window__input-container">
+            <input class="modal-window__input" type="text" placeholder="ФИО*" />
+            <input
+              class="modal-window__input"
+              id="input-phone"
+              minlength="12"
+              maxlength="12"
+              placeholder="Телефон*"
+              type="tel"
+            />
+            <input
+              class="modal-window__input"
+              type="email"
+              placeholder="E-mail*"
+            />
+            <select class="modal-window__select" placeholder="blabla">
+              <option class="modal-window__first-option">Выбрать услугу</option>
+              <option>Услуга 1</option>
+              <option>Услуга 2</option>
+              <option>Услуга 3</option>
+              <option>Услуга 4</option>
+            </select>
+            <textarea
+              name="comment"
+              id="comment-field"
+              placeholder="Комментарий"
+              class="modal-window__textarea"
+            ></textarea>
+          </div>
+          <div class="modal-window__agreement-container">
+            <input
+              class="modal-window__checkbox"
+              type="checkbox"
+              id="scales"
+              name="scales"
+              checked
+            />
+            <p class="modal-window__agreement">
+              Я даю свое согласие Фонду развития бизнеса Краснодарского края на
+              обработку моих персональных данных, в соответствии с Федеральным
+              законом от 27.07.2006 года №152-ФЗ «О персональных данных», на
+              условиях и для целей, определенных
+              <span class="modal-window__confidential"
+                >Политикой конфиденциальности</span
+              >
+            </p>
+          </div>
+          <button id="close-modal" class="modal-window__button">
+            Оставить заявку
+          </button>
+        </div>
+        <div id="modal-fader" class="modal-fader"></div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
