updated slider styles

--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
                   src="images/img1.png"
                   alt="carousel img"
                 />
+                <div class="info__slide-text-group">
+                  <span>Школа молодого предпринимателя — Бизнес молодых</span>
+                  <div class="affiche__control-right">
+                    <span class="affiche__more">Подробнее</span>
+                    <img
+                      class="info__slide-arrow"
+                      src="/svg/angled-arrow.svg"
+                      alt="control-arrow"
+                    />
+                  </div>
+                </div>
               </div>
               <div id="img-2" class="info__img">
                 <img
@@ -106,6 +117,9 @@
                   src="images/img2.png"
                   alt="carousel img"
                 />
+                <div class="info__slide-text-group">
+                  <span>Поддержка самозанятых</span>
+                </div>
               </div>
               <div id="img-3" class="info__img">
                 <img
@@ -113,6 +127,9 @@
                   src="images/img3.png"
                   alt="carousel img"
                 />
+                <div class="info__slide-text-group">
+                  <span>Центр поддержки предпринимательства</span>
+                </div>
               </div>
               <div id="img-4" class="info__img">
                 <img
@@ -120,6 +137,9 @@
                   src="images/img4.png"
                   alt="carousel img"
                 />
+                <div class="info__slide-text-group">
+                  <span>Центр сопровождения инвестиционных проектов</span>
+                </div>
               </div>
               <div id="img-5" class="info__img">
                 <img
@@ -127,6 +147,9 @@
                   src="images/img5.png"
                   alt="carousel img"
                 />
+                <div class="info__slide-text-group">
+                  <span>Патентная система налогообложения</span>
+                </div>
               </div>
             </div>
           </div>
@@ -220,7 +243,7 @@
                 id="input-phone"
                 required
                 placeholder="Телефон*"
-                type="tel"
+                type="number"
                 inputmode="tel"
               />
               <span id="error-text-tel" class="modal-window__error-text"
