--- a/index.html
+++ b/index.html
@@ -223,7 +223,16 @@
           </div>
         </div>
         <div id="modal" class="modal-window">
-          <h2 class="modal-window__header">ЗАЯВКА НА ОКАЗАНИЕ УСЛУГИ</h2>
+          <img
+            id="modal-close"
+            class="modal-window__close"
+            src="/svg/close.svg"
+            alt="close"
+          />
+          <h2 class="modal-window__header">
+            ЗАЯВКА НА ОКАЗАНИЕ <br />
+            УСЛУГИ
+          </h2>
           <div class="modal-window__input-container">
             <div class="modal-window__input-group">
               <input
