--- a/index.html
+++ b/index.html
@@ -229,10 +229,7 @@
             src="/svg/close.svg"
             alt="close"
           />
-          <h2 class="modal-window__header">
-            ЗАЯВКА НА ОКАЗАНИЕ <br />
-            УСЛУГИ
-          </h2>
+          <h2 class="modal-window__header">ЗАЯВКА НА ОКАЗАНИЕ УСЛУГИ</h2>
           <div class="modal-window__input-container">
             <div class="modal-window__input-group">
               <input
