fixed arrows in affiche

--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
             <div id="affiche" class="affiche">
               <img
                 id="prev-event"
-                class="calendar-affiche__arrow calendar-affiche__arrow-absolute--left"
+                class="affiche__arrow-left"
                 src="/svg/arrow.svg"
                 alt="arrow"
               />
               <img
                 id="next-event"
-                class="calendar-affiche__arrow-right calendar-affiche__arrow calendar-affiche__arrow-absolute--right"
+                class="affiche__arrow-right"
                 src="/svg/arrow.svg"
                 alt="arrow"
               />
