--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <div id="slider" class="info__slider">
               <div id="img-1" class="info__img-big">
                 <img
+                  draggable="false"
                   class="info__picture"
                   src="images/img1.png"
                   alt="carousel img"
@@ -104,6 +105,7 @@
                   <div class="info__about-group">
                     <span class="affiche__more">Подробнее</span>
                     <img
+                      draggable="false"
                       class="info__slide-arrow"
                       src="/svg/angled-arrow.svg"
                       alt="control-arrow"
@@ -113,6 +115,7 @@
               </div>
               <div id="img-2" class="info__img">
                 <img
+                  draggable="false"
                   class="info__picture"
                   src="images/img2.png"
                   alt="carousel img"
@@ -123,6 +126,7 @@
               </div>
               <div id="img-3" class="info__img">
                 <img
+                  draggable="false"
                   class="info__picture"
                   src="images/img3.png"
                   alt="carousel img"
@@ -133,6 +137,7 @@
               </div>
               <div id="img-4" class="info__img">
                 <img
+                  draggable="false"
                   class="info__picture"
                   src="images/img4.png"
                   alt="carousel img"
@@ -143,6 +148,7 @@
               </div>
               <div id="img-5" class="info__img">
                 <img
+                  draggable="false"
                   class="info__picture"
                   src="images/img5.png"
                   alt="carousel img"
