added touch events

--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
                 alt="arrow"
               />
               <img
-                id="prev-event"
+                id="prev-event-small"
                 class="calendar-affiche__arrow-mobile calendar-affiche__arrow-mobile--left"
                 src="/svg/arrow-mobile.svg"
                 alt="arrow"
               />
               <img
-                id="next-event"
+                id="next-event-small"
                 class="calendar-affiche__arrow-mobile calendar-affiche__arrow-mobile--right"
                 src="/svg/arrow-mobile.svg"
                 alt="arrow"
